# turing-game-accusation-system

./: .gitattributes  BoW_encoding.py  README.md  best_runs_csv.txt  calculate_train_time_summary_stat.py  confidence_calibration_analysis.py  confidence_calibration_plot_2_buckets.py  create_plots.py  create_plots_manually.py  create_plots_manually_variables.txt  early_stopping_barchart.py  encode_data.ipynb  ensemble_confidence_calibration.py  extract_runs.py  find_best_model.py  find_closest_to_mean.py  generate_early_stopping_configs.py  generate_early_stopping_fixed_epoch_configs.py  generate_early_stopping_fixed_num_steps_configs.py  generate_gridsearch_configs.py  generate_gridsearch_smaller_models_configs.py  main.py  most_representative_seed.py  parse_early_stopping_runs.py  parse_final_val_loss_runs.py  plot_meshgrids.py  pyproject.toml  requirements_freeze.txt  retrieve_user_ids.py  runs.txt  scrape.py  show_best_calibrated_models.py  time_for_training.txt  visualize_weights.py
analysis/: BoW_vs_Sentence_Embedding_KNN.ipynb  classifier_evaluation.ipynb  data_analysis.ipynb
checkpoints/: run003.pth  run004.pth  run005.pth  run009.pth  run010.pth  run011.pth  run012.pth  run013.pth  run016.pth  run019.pth  run021.pth  run023.pth  run025.pth  run027.pth  run028.pth  run029.pth  run030.pth  run031.pth  run037.pth  run039.pth  run040.pth  run041.pth  run042.pth  run044.pth  run049.pth  run051.pth  run053.pth  run054.pth  run056.pth  run057.pth  run058.pth  run062.pth  run063.pth  run064.pth  run065.pth  run066.pth  run067.pth  run068.pth  run069.pth  run070.pth  (+107 more)
(+5368 files in other folders)
